--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-async-errors": "^3.1.1",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
+    "pino": "^8.4.1",
     "por": "^0.0.2",
     "quokka": "^0.0.7"
   }
