--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "env": "^0.0.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "joi": "^17.6.0",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
     "pino": "^8.4.1",
