--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "joi": "^17.6.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
     "pino": "^8.4.1",
