--- a/package.json
+++ b/package.json
@@ -27,16 +27,18 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "env": "^0.0.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
-    "pino": "^8.4.1",
-    "por": "^0.0.2"
+    "multer": "^1.4.5-lts.1",
+    "pino": "^8.4.1"
   }
 }
